--- a/private_dot_config/sway/config
+++ b/private_dot_config/sway/config
@@ -32,6 +32,9 @@ output * bg ~/molinos_nevados_negativo.png fill
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
+# Notification daemon
+exec mako
+
 # Clipboard
 exec wl-paste -t text --watch clipman store
 exec wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
@@ -310,9 +313,14 @@ bindsym $mod+Next exec pactl set-sink-volume @DEFAULT_SINK@ +10%
 bindsym $mod+Prior exec pactl set-sink-volume @DEFAULT_SINK@ -10%
 bindsym $mod+Home exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
-# Key bindins
+# Apps key bindins
 bindsym $mod+d exec --no-startup-id ~/.config/rofi/launchers/type-2/launcher.sh
 bindsym $mod+x exec --no-startup-id ~/.config/rofi/powermenu/type-2/powermenu.sh
 bindsym $mod+Ctrl+c exec code
 bindsym $mod+Ctrl+b exec brave
 bindsym $mod+Ctrl+d exec dolphin
+bindsym $mod+Ctrl+z exec zotero
+bindsym $mod+Ctrl+l exec logseq
+bindsym $mod+Ctrl+w exec librewolf
+bindsym Print exec /usr/bin/sway-interactive-screenshot
+
